--- a/run/Cargo.toml
+++ b/run/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 utils = { path = "../utils" }
 reqwest = "0.11.6"
 tokio = { version = "1.22.0", features = ["full"] }
+log = "0.4"
+simplelog = "0.12.0"
