--- a/ephemeris/Cargo.toml
+++ b/ephemeris/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# external dependencies
 chrono = "0.4.22"
 log = "0.4"
 reqwest = "0.11.6"
