--- a/dataframe/Cargo.toml
+++ b/dataframe/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "toolkit"
+name = "dataframe"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ephemeris = { path = "../ephemeris" }
+# internal dependencies
+toolkit = { path = "../toolkit" }
 time_series = { path = "../time_series" }
-tokio = { version = "1.22.0", features = ["full"] }
-log = "0.4"
-simplelog = "0.12.0"
+ephemeris = { path = "../ephemeris" }
+# external dependencies
 csv = "1.1.6"
+log = "0.4"
