--- a/time_series/Cargo.toml
+++ b/time_series/Cargo.toml
@@ -11,3 +11,6 @@ ephemeris = { path = "../ephemeris" }
 # external deps
 csv = "1.1.6"
 log = "0.4"
+futures = "0.3.17"
+serde_json = "1.0"
+reqwest = "0.11.6"
