--- a/ephemeris/Cargo.toml
+++ b/ephemeris/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# internal dependencies
+time_series = { path = "../time_series" }
 # external dependencies
 chrono = "0.4.22"
 log = "0.4"
 reqwest = "0.11.6"
+serde = { version = "1.0", features = ["derive"] }
+
