--- a/run/Cargo.toml
+++ b/run/Cargo.toml
@@ -18,3 +18,5 @@ dataframe = { path = "../dataframe" }
 tokio = { version = "1.24.1", features = ["full"] }
 log = "0.4"
 simplelog = "0.12.0"
+plotters = "0.3.4"
+chrono = "0.4.22"
