--- a/time_series/Cargo.toml
+++ b/time_series/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# internal deps
-ephemeris = { path = "../ephemeris" }
 # external deps
 csv = "1.1.6"
 log = "0.4"
-futures = "0.3.17"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = "0.11.6"
+reqwest = { version = "0.11.6", features = ["json"] } # reqwest with JSON parsing support
+tokio = { version = "1.24.2", features = ["full"] } # for our async runtime
+chrono = "0.4.22"
+plotters = "0.3.4"
+
+[dev-dependencies]
+futures = "0.3.24" # for our async / await blocks
